[project]
name = "borg2mqtt"
version = "0.1.2"
description = "Send borg backup updates over MQTT"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }
keywords = ["borg", "mqtt", "hass"]                # Optional

authors = [
  { name = "Easton Potokar", email = "contagon6@gmail.com" }, # Optional
]
maintainers = [
  { name = "Easton Potokar", email = "contagon6@gmail.com" }, # Optional
]

classifiers = [ # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["paho-mqtt", "platformdirs", "python-slugify", "pyyaml"]

[project.urls]
"Homepage" = "https://github.com/contagon/borg2mqtt"
"Bug Reports" = "https://github.com/contagon/borg2mqtt/issues"
"Source" = "https://github.com/contagon/borg2mqtt"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "basedpyright>=1.37.4",
    "pytest>=7.4.4",
]

[project.scripts]
borg2mqtt = "borg2mqtt:run_borg2mqtt"

[tool.basedpyright]
typeCheckingMode = "strict"
