[project]
name = "borg2mqtt"
version = "0.2.0"
description = "Send borg backup updates over MQTT"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["borg", "mqtt", "hass"]

authors = [{ name = "Easton Potokar", email = "contagon6@gmail.com" }]
maintainers = [{ name = "Easton Potokar", email = "contagon6@gmail.com" }]

classifiers = [
  "Development Status :: 5 - Production/Stable",

  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = ["paho-mqtt", "platformdirs", "python-slugify", "pyyaml"]

[project.urls]
"Homepage" = "https://github.com/contagon/borg2mqtt"
"Bug Reports" = "https://github.com/contagon/borg2mqtt/issues"
"Source" = "https://github.com/contagon/borg2mqtt"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["basedpyright>=1.37.4", "pytest>=7.4.4", "ruff>=0.15.0"]

[project.scripts]
borg2mqtt = "borg2mqtt:run_borg2mqtt"

[tool.basedpyright]
typeCheckingMode = "strict"
